Corrects clipping of title

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -15,7 +15,6 @@
   font-family: 'Manrope', sans-serif;
   font-size: 75px;
   font-weight: 1000;
-  border-radius: 70px;
 
   --bg-size: 400%;
   /* --color-one: hsl(15 90% 55%); */
